src/test/deca/syntax/invalid/while-withoutCondition.synt
while-withoutCondition.deca:2: